infrastructure/helm/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: deny-all
  namespace: video-converter

spec:

  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
